testsuite/gnatprove/tests/SB07-003__crash/test.out
a-cfdlli.ads:393:13: info: subprogram "At_End" will terminate, terminating annotation has been proved, in instantiation at database.adb:15
a-cfdlli.ads:398:13: info: subprogram "At_End" will terminate, terminating annotation has been proved, in instantiation at database.adb:15
a-cofuma.ads:317:13: info: subprogram "Copy_Key" will terminate, terminating annotation has been proved, in instantiation at a-cfdlli.ads:162, in instantiation at database.adb:15
a-cofuma.ads:318:13: info: subprogram "Copy_Element" will terminate, terminating annotation has been proved, in instantiation at a-cfdlli.ads:162, in instantiation at database.adb:15
a-cofuve.ads:98:13: info: subprogram "First" will terminate, terminating annotation has been proved, in instantiation at a-cfdlli.ads:77, in instantiation at database.adb:15
a-cofuve.ads:99:06: info: data dependencies proved, in instantiation at a-cfdlli.ads:77, in instantiation at database.adb:15
a-cofuve.ads:342:13: info: subprogram "Copy_Element" will terminate, terminating annotation has been proved, in instantiation at a-cfdlli.ads:77, in instantiation at database.adb:15
database.adb:15:04: error: "Item" is not writable
database.adb:15:04: error: instantiation error at a-cfdlli.ads:77
database.adb:15:04: error: instantiation error at a-cofuve.ads:342
database.adb:15:04: error: object was declared as not writable at a-cofuve.ads:342, instance at a-cfdlli.ads:77, instance at line 15
database.adb:19:04: info: initialization of "Database" proved
gnatprove: error during flow analysis and proof
